# pm-gui

./: Cargo.toml
src/: lib.rs  main.rs
src/backend/: package_manager.rs  repository.rs  xml_parser.rs
src/config/: mod.rs  settings.rs  themes.rs
src/gui/: app.rs  image_loader.rs  mod.rs
src/gui/components/: package_details.rs  package_grid.rs  settings_modal.rs  sidebar.rs
