[package]
name = "pisi-package-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.19"
anyhow = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
